fix  screenshot aspect ratio issue on mobile

--- a/client/src/app/home/intro/intro.component.scss
+++ b/client/src/app/home/intro/intro.component.scss
@@ -1,3 +1,4 @@
 .screenshot01 {
-    height: 600px;
+    max-height: 600px;
+    width: auto;
 }
